ResponseMaker refactored